Update dependencies, add nuget support

--- a/Common/CommonMath/CommonMath.csproj
+++ b/Common/CommonMath/CommonMath.csproj
@@ -65,6 +65,7 @@
     <Compile Include="UniversalNumericOperation.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CommonMath.nuspec" />
     <None Include="signature.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
