--- a/Common/CommonData/CommonData.csproj
+++ b/Common/CommonData/CommonData.csproj
@@ -41,6 +41,9 @@
     <AssemblyOriginatorKeyFile>signature.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonLinq, Version=1.0.0.0, Culture=neutral, PublicKeyToken=74c410a7ebd209e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonLinq.1.0.1\lib\net45\CommonLinq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -70,13 +73,7 @@
     <Compile Include="Trie.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CommonLinq\CommonLinq.csproj">
-      <Project>{32F7F676-B4BB-4656-9E3A-88191B0C2383}</Project>
-      <Name>CommonLinq</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="packages.config" />
     <None Include="signature.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
