--- a/Common/CommonLinq/CommonLinq.csproj
+++ b/Common/CommonLinq/CommonLinq.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CommonLinq.nuspec" />
     <None Include="signature.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
